Added AuthenticationTokenRepository implementation using microsoft:credential-secure-storage